--- a/special.html
+++ b/special.html
@@ -166,11 +166,17 @@
                         <div class="fw-bold">
                             <div class="fw-bold text-center mt-2" style="font-size: 20px;">General Medicine
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                           <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -193,11 +199,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Gynecology
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -220,11 +232,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Pediatrics
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -245,13 +263,19 @@
                             </div>
                         </div>
                         <div class="fw-bold">
-                            <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Psychotherapy
+                            <div class="mt-2 fw-bold text-center" style="font-size: 20px;">psychological therapy
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -274,11 +298,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Ophthalmology
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -301,11 +331,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Dermatology
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -328,11 +364,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Mental Wellness
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -355,11 +397,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Family Medicine
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -382,11 +430,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Skin & VD
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -409,11 +463,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Orthopaedics
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -436,11 +496,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Endocrinology
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -463,11 +529,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Gastroenterology
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -490,11 +562,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Nephrology
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -517,11 +595,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Neurology
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
@@ -544,11 +628,17 @@
                         <div class="fw-bold">
                             <div class="mt-2 fw-bold text-center" style="font-size: 20px;">Obstetrician
                             </div>
-                            <p class="text-center mt-2">Price - <strike class="text-danger">
-                                <span>₹ 900</span></strike>
-                                <span class="text-success">₹ 650</span>
-                            </p>
-                            <p class="text-center">12 Months</p>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <span>Price</span>
+                                    <strike class="text-danger d-block">
+                                        <span>₹900</span></strike>
+                                </div>
+                                <div class="text-center">
+                                    <span>Offer Price</span>
+                                    <span class="text-success d-block">₹650</span>
+                                </div>
+                           </div>
                         </div>
                     </div>
                 </div>
