--- a/index.html
+++ b/index.html
@@ -325,27 +325,22 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <!-- Discount End -->
 
-        <!-- Dental -->
-        <div class="container mt-4">
-            <h3 class="fw-bold my-5">Dental</h3>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="bg-white p-3 rounded shadow-sm">
-                        <img src="./asset/Discounted/lab-test.jpg" alt="Dentist" class="img-fluid rounded mb-3"
-                            style="height: 300px; width: 100%; object-fit: cover;">
-                        <h4 class="fw-bold">Dentistry</h4>
-                        <a href="#" class="fw-bold text-decoration-none hover-effect" style="color: #229ea6;">
-                            Click to Book <i class="fa-solid fa-angle-right"></i>
-                        </a>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                    <div class="p-3 rounded shadow-lg text-center bg-white">
+                        <img src="./asset/Complimentary Camps/dental.jpg" class="img-fluid w-100 rounded shadow"
+                            alt="Doctor Filling Form">
+                            <div class="bg-white p-3 d-flex justify-content-between">
+                                <h4 class="fw-bold">Dentistry</h4>
+                                <a href="#" class="fw-bold text-decoration-none hover-effect" style="color: #229ea6;">
+                                    Click to Book <i class="fa-solid fa-angle-right"></i>
+                                </a>
+                            </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Dental End -->
+        <!-- Discount End -->
 
         <!-- Popup -->
         <div class="modal fade" id="bookingModal" tabindex="-1" aria-labelledby="bookingModalLabel" aria-hidden="true">
