--- a/special.html
+++ b/special.html
@@ -145,7 +145,7 @@
 
         <!-- Speciality  -->
         <div class="container mt-4">
-            <h3 class="fw-bold my-3">View Speciality consultation</h3>
+            <h3 class="fw-bold my-3">Speciality consultation</h3>
     
             <div class="row g-4">
                 <!-- Card 1 -->
