--- a/Camps&Webinar.html
+++ b/Camps&Webinar.html
@@ -169,7 +169,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">The Impact of Lifestyle on Heart Health</div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Cardiology</div>
                     </div>
                 </div>
 
@@ -188,7 +188,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Lifestyle Changes to Reduce Stroke Risk</div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Stroke Awareness</div>
                     </div>
                 </div>
 
@@ -207,7 +207,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Women's Hormonal Health: Understanding and Managing Imbalances</div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Women's Health</div>
                     </div>
                 </div>
 
@@ -227,7 +227,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Mind Diet - Boosting Mood - Nutritional Psychiatry</div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Helath and Lifestyle</div>
                     </div>
                 </div>
 
@@ -246,7 +246,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Women's Hormonal Health: Balance and Wellness</div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Hormonal Imbalance</div>
                     </div>
                 </div>
 
@@ -266,7 +266,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">The Impact of Stress on Cancer: Strengthen Your Immune System</div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Stress</div>
                     </div>
                 </div>
 
@@ -286,7 +286,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Lifestyle Changes for Cancer Prevention
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Cancer Prevention
                         </div>
                     </div>
                 </div>
@@ -328,7 +328,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Protecting Women's Health from Cancer
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Cancer in Women and its Prevention
                         </div>
                     </div>
                 </div>
@@ -357,7 +357,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Protect Your Vision: Eye Care Tips
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Eye Care
                         </div>
                     </div>
                 </div>
@@ -377,7 +377,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Managing Diabetes Effectively
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Diabetes Awareness
                         </div>
                     </div>
                 </div>
@@ -440,7 +440,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Blood Donation Myths vs. Facts
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Blood Donation
                         </div>
                     </div>
                 </div>
@@ -461,7 +461,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Mind Over Matter: Mental Health Insights                        </div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Mental Health Awareness</div>
                     </div>
                 </div>
 
@@ -482,7 +482,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Building Emotional Resilience
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Emotional Imbalance and Stress
                         </div>
                     </div>
                 </div>
@@ -503,7 +503,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Diabetes Prevention: Lifestyle Changes and Tips
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Awareness on Diabetes & Hypertension
                         </div>
                     </div>
                 </div>
@@ -524,7 +524,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Nurturing Mental Wellness                        </div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Mental & Inner Well-Being</div>
                     </div>
                 </div>
 
@@ -543,7 +543,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Dental Care for a Confident Smile
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Dental Care
                         </div>
                     </div>
                 </div>
@@ -763,7 +763,7 @@
 
         <!-- Paid Camps -->
         <div class="container mt-4">
-            <h3 class="fw-bold mt-5">Free Webinar</h3>
+            <h3 class="fw-bold mt-5">Paid Camps</h3>
             <div class="mb-3">
                 <a href="#" class="allbtn btn text-white p-2 rounded" style="background-color: #229ea6;">Online</a>
                 <a href="#" class="allbtn btn text-white p-2 rounded" style="background-color: #229ea6;">Offline</a>
@@ -780,12 +780,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="The Science Behind Yoga: Understanding its Benefits " data-fees="3937.5">
+                                    data-bs-target="#bookingModal" data-event="Yoga & It's Kind " data-fees="3937.5">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">The Science Behind Yoga: Understanding its Benefits
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Yoga & It's Kind
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center">Price <strike class="text-danger d-block"><span>₹6300</span></strike>
@@ -805,12 +805,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Get Fit with Zumba: A Beginner's Guide" data-fees="4275">
+                                    data-bs-target="#bookingModal" data-event="Zumba" data-fees="4275">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Get Fit with Zumba: A Beginner's Guide
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Zumba
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center">Price <strike class="text-danger d-block"><span>₹6840</span></strike>
@@ -830,12 +830,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Laugh Your Way to Wellness: Benefits of Laughter Therapy" data-fees="4837">
+                                    data-bs-target="#bookingModal" data-event="Laughter Therapy" data-fees="4837">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Laugh Your Way to Wellness: Benefits of Laughter Therapy
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Laughter Therapy
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center"> Price <strike class="text-danger d-block"><span>₹7740</span></strike>
@@ -855,12 +855,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">                   
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Healthy Eating Made Easy: Tips from a Registered Dietitian" data-fees="5962">
+                                    data-bs-target="#bookingModal" data-event="Dietician Consultation" data-fees="5962">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 15px;">Healthy Eating Made Easy: Tips from a Registered Dietitian
+                        <div class="fw-bold text-center mt-2" style="font-size: 15px;">Dietician Consultation
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 9540</span></strike>
@@ -880,12 +880,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Healthy Living: Expert Insights" data-fees="5962">
+                                    data-bs-target="#bookingModal" data-event="Doctor talk Generic" data-fees="5962">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Healthy Living: Expert Insights
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Doctor talk Generic
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 9540</span></strike>
@@ -905,12 +905,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Building Stronger Teams: Strategies for Success" data-fees="7087">
+                                    data-bs-target="#bookingModal" data-event="Team Building" data-fees="7087">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Building Stronger Teams: Strategies for Success
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Team Building
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center">Price<strike class="text-danger d-block"><span>₹
@@ -990,7 +990,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Medication &
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Meditataion &
                             Relaxation
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">                            
@@ -1011,12 +1011,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Get Moving: Fitness Routines for All Levels" data-fees="5400">
+                                    data-bs-target="#bookingModal" data-event="Fitness Training" data-fees="5400">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Get Moving: Fitness Routines for All Levels
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Fitness Training
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 8640</span></strike>
@@ -1062,12 +1062,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Comfort and Productivity: Ergonomic Design Principles" data-fees="3712">
+                                    data-bs-target="#bookingModal" data-event="Ergonomics" data-fees="3712">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Comfort and Productivity: Ergonomic Design Principles
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Ergonomics
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 5940</span></strike>
@@ -1087,12 +1087,12 @@
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
                                 <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
                                     style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Step Up Your Fitness: Aerobics for All Levels" data-fees="4275">
+                                    data-bs-target="#bookingModal" data-event="Aerobics" data-fees="4275">
                                     Select
                                 </a>
                             </div>
                         </div>
-                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Step Up Your Fitness: Aerobics for All Levels
+                        <div class="fw-bold text-center mt-2" style="font-size: 16px;">Aerobics
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
                             <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 6840</span></strike>
