--- a/Camps&Webinar.html
+++ b/Camps&Webinar.html
@@ -788,9 +788,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Yoga & It's Kind
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price <strike class="text-danger d-block"><span>₹6300</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹6000</span>
                             </p>
-                            <p class="text-center">Offer price <span class="text-success d-block">₹3937.5</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹4000</span></p>
                         </div>
                     </div>
                 </div>
@@ -813,9 +813,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Zumba
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price <strike class="text-danger d-block"><span>₹6840</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹6000</span>
                             </p>
-                            <p class="text-center">Offer price <span class="text-success d-block">₹4275</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹4000</span></p>
                         </div>
                     </div>
                 </div>
@@ -838,9 +838,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Laughter Therapy
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center"> Price <strike class="text-danger d-block"><span>₹7740</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹7000</span>
                             </p>
-                            <p class="text-center"> Offer price <span class="text-success d-block">₹4837</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
                         </div>
                     </div>
                 </div>
@@ -863,9 +863,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 15px;">Dietician Consultation
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 9540</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹6000</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 5962</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹4000</span></p>
                         </div>
                     </div>
                 </div>
@@ -888,9 +888,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Doctor talk Generic
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 9540</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 5962</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹</span></p>
                         </div>
                     </div>
                 </div>
@@ -913,10 +913,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Team Building
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹
-                                        11340</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹7000</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 7087</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹5000</span></p>
                         </div>
                     </div>
                 </div>
@@ -940,10 +939,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">TeleConsultation
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹
-                                        18000</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 11250</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹</span></p>
                         </div>
                     </div>
                 </div>
@@ -966,10 +964,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">HIIT
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹
-                                        11340</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 7087</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹</span></p>
                         </div>
                     </div>
                 </div>
@@ -993,10 +990,10 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Meditataion &
                             Relaxation
                         </div>
-                        <div class="fw-bold d-flex justify-content-between align-items-center mt-3">                            
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 6300</span></strike>
+                        <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
+                            <p class="text-center">Offline price<span class="d-block text-info">₹6000</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 3937</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹4000</span></p>
                         </div>
                     </div>
                 </div>
@@ -1019,9 +1016,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Fitness Training
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 8640</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 5400</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹</span></p>
                         </div>
                     </div>
                 </div>
@@ -1044,10 +1041,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Skill Development
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹
-                                        14400</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 9000</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹</span></p>
                         </div>
                     </div>
                 </div>
@@ -1070,9 +1066,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Ergonomics
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 5940</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">₹7000</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 3712</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹5000</span></p>
                         </div>
                     </div>
                 </div>
@@ -1095,9 +1091,9 @@
                         <div class="fw-bold text-center mt-2" style="font-size: 16px;">Aerobics
                         </div>
                         <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                            <p class="text-center">Price<strike class="text-danger d-block"><span>₹ 6840</span></strike>
+                            <p class="text-center">Offline price<span class="d-block text-info">N/A</span>
                             </p>
-                            <p class="text-center">Offer price<span class="text-success d-block">₹ 4275</span></p>
+                            <p class="text-center">Online price<span class="text-success d-block">₹8000</span></p>
                         </div>
                     </div>
                 </div>
