--- a/Camps&Webinar.html
+++ b/Camps&Webinar.html
@@ -158,7 +158,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="bg-white rounded p-3 equal-height">
                         <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid/Cardiology.jpg" alt="Avatar" class="d-block w-100 rounded"
+                            <img src="./asset/Paid-Webinar/Mental Health.jpg" alt="Avatar" class="d-block w-100 rounded"
                                 height="250px" style="object-fit: cover;">
                             <div
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
@@ -177,7 +177,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="bg-white rounded p-3 equal-height">
                         <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid/Stroke-Awareness.jpg" alt="Avatar" class="d-block w-100 rounded"
+                            <img src="./asset/Paid-Webinar/Men's Health.jpg" alt="Avatar" class="d-block w-100 rounded"
                                 height="250px" style="object-fit: cover;">
                             <div
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
@@ -196,7 +196,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="bg-white rounded p-3 equal-height">
                         <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid/Women's-Health.jpg" alt="Avatar" class="d-block w-100 rounded"
+                            <img src="./asset/Paid-Webinar/Women's Health.jpg" alt="Avatar" class="d-block w-100 rounded"
                                 height="250px" style="object-fit: cover;">
                             <div
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
@@ -215,7 +215,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="bg-white rounded p-3 equal-height">
                         <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid/Helath-Lifestyle.jpg" alt="Avatar" class="d-block w-100 rounded"
+                            <img src="./asset/Paid-Webinar/Obesity Awareness.jpg" alt="Avatar" class="d-block w-100 rounded"
                                 height="250px" style="object-fit: cover;">
                             <div
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
@@ -234,7 +234,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="bg-white rounded p-3 equal-height">
                         <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid/Hormonal-Imbalance.jpeg" alt="Avatar" class="d-block w-100 rounded"
+                            <img src="./asset/Paid-Webinar/Stroke Awareness.jpg" alt="Avatar" class="d-block w-100 rounded"
                                 height="250px" style="object-fit: cover;">
                             <div
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
@@ -253,7 +253,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="bg-white rounded p-3 equal-height">
                         <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid/Stress.jpg" alt="Avatar" class="d-block w-100 rounded" height="250px"
+                            <img src="./asset/Paid-Webinar/Cancer Awareness.jpg" alt="Avatar" class="d-block w-100 rounded" height="250px"
                                 style="object-fit: cover;">
                             <div
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
@@ -273,7 +273,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="bg-white rounded p-3 equal-height">
                         <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid/Cancer-prevention.jpeg" alt="Avatar" class="d-block w-100 rounded"
+                            <img src="./asset/Paid-Webinar/Cardiology.jpg" alt="Avatar" class="d-block w-100 rounded"
                                 height="250px" style="object-fit: cover;">
                             <div
                                 class="overlay d-flex flex-column justify-content-center align-items-center text-center">
